# luban-ai-assistant

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/agent/: __init__.py  checkpoint.py  design_graph.py  design_nodes.py  graph.py  guidance.py  mapping_rules.py  nodes.py  state.py  tools.py
app/api/: __init__.py  ai_deps.py  assets.py  chat.py  config.py  design.py  errors.py  guidance.py  health.py  ws.py
app/auth/: __init__.py  bff_user.py  jwt.py
app/core/: __init__.py  config.py  deps.py
app/eval/: __init__.py  dataset.py  metrics.py  runner.py
app/guardrails/: __init__.py  input.py  output.py
app/llm/: __init__.py  adapters.py  multimodal.py  provider.py
app/observability/: __init__.py  langfuse.py  tracer.py
app/rag/: __init__.py  builtin_materials.py  embedding.py  retriever.py  sync_materials.py
app/schemas/: __init__.py  expression_validator.py  page_schema.py  validators.py
app/storage/: __init__.py  minio.py
deploy/: deploy.sh  init.sh
docs/: DEPLOY.md
tests/: conftest.py  test_agent.py  test_api.py  test_contract.py  test_design.py  test_design_api.py  test_eval.py  test_expression_validator.py  test_guardrails.py  test_guidance.py  test_health.py  test_mapping.py  test_minio.py  test_multimodal.py  test_provider.py  test_rag.py  test_validators.py  test_ws.py
tests/smoke/: __init__.py  test_smoke.py
