[project]
name = "luban-ai-assistant"
version = "0.1.0"
description = "Luban AI 助手 — 自然语言生成/编辑页面 + 引导 + 模型切换"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "luban" }]

dependencies = [
    # Web 框架
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.1.0",
    "websockets>=12.0",
    # Pydantic v2 + 结构化输出
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "instructor>=1.4.0",
    # JSON Schema 校验（propsSchema 合规闸）
    "jsonschema>=4.23.0",
    # LangChain provider（仅集成 ChatModel 抽象，不绑死单一厂商）
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",       # OpenAI 兼容协议（DeepSeek/通义兼容）
    "langchain-community>=0.3.0",
    "openai>=1.40.0",                # embedding 客户端（OpenAI 兼容协议）
    # LangGraph 状态图 + checkpoint
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    # RAG：Milvus hybrid + 云端 embedding
    "pymilvus>=2.4.0",
    # PostgreSQL
    "asyncpg>=0.29.0",
    "psycopg[binary]>=3.2.0",
    # MinIO（OSS）
    "minio>=7.2.0",
    # 可观测性
    "langfuse>=2.0.0",
    # JWT 鉴权（复用 luban AUTH_JWT_SECRET 自验）
    "pyjwt>=2.9.0",
    # 工具
    "httpx>=0.27.0",
    "tenacity>=8.5.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "respx>=0.21.0",        # httpx mock
    "anyio>=4.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ===== Ruff =====
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",      # line-length 由 formatter 管
    "RUF001",    # 注释中的 CJK 全角标点歧义（本项目中文注释，有意为之）
    "RUF002",    # docstring 中的 CJK 全角标点歧义
    "RUF003",    # 字符串字面量中的 CJK 全角标点歧义
    "B008",      # Depends() 作默认参数：FastAPI 标准模式，误报
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B017"]  # 测试允许 pytest.raises(Exception)（pydantic ValidationError 基类）

[tool.ruff.format]
quote-style = "double"

# ===== mypy =====
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
# 第三方无 stub 的库放宽
[[tool.mypy.overrides]]
module = [
    "pymilvus.*",
    "minio.*",
    "langfuse.*",
    "instructor.*",
    "langgraph.*",
    "langchain_community.*",
    "jsonschema.*",
    "asyncpg.*",
]
ignore_missing_imports = true

# ===== pytest =====
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "smoke: 三家模型真实 API 冒烟(需 key,默认不在 CI 跑)",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "app/__init__.py",
    # eval/runner.py 是 CLI 入口（python -m app.eval.runner），核心评测逻辑在
    # metrics.py/dataset.py（已覆盖）；runner 仅做 argparse 调度 + 真实 VLM 调用（需 key，不跑单测）。
    "app/eval/runner.py",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
